[gd_scene load_steps=6 format=3 uid="uid://bwv46wwxmw4jr"]

[ext_resource type="Script" path="res://ui/start_menu.gd" id="1_hflfg"]
[ext_resource type="Theme" uid="uid://b201gqbnd6dqy" path="res://resources/default_theme.tres" id="2_1md6x"]
[ext_resource type="PackedScene" uid="uid://nvjmvg5q00tq" path="res://entities/collectables/light_bug.tscn" id="2_fvfle"]
[ext_resource type="PackedScene" uid="uid://btrfu5gdv336r" path="res://entities/interactables/frog_statue.tscn" id="4_gqg7j"]
[ext_resource type="Texture2D" uid="uid://d5cc7tppr2r1" path="res://assets/spritesheets/spr_mini_ground.png" id="5_dhpdt"]

[node name="Panel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="StartMenu" type="CenterContainer" parent="."]
layout_mode = 2
script = ExtResource("1_hflfg")

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 2

[node name="Title" type="Label" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1md6x")
text = "FROGLORE
"
horizontal_alignment = 1

[node name="empty" type="Label" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1md6x")
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="StartMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
text = "Play
"

[node name="ExitButton" type="Button" parent="StartMenu/VBoxContainer"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
text = "Exit
"

[node name="LightBug" parent="." instance=ExtResource("2_fvfle")]
position = Vector2(61, 24)

[node name="LightBug2" parent="." instance=ExtResource("2_fvfle")]
position = Vector2(175, 24)

[node name="FrogStatue" parent="." instance=ExtResource("4_gqg7j")]
z_index = 1
position = Vector2(45, 105)
override_active_state = true

[node name="FrogStatue2" parent="." instance=ExtResource("4_gqg7j")]
z_index = 1
position = Vector2(195, 105)
override_active_state = true

[node name="SprMiniGround" type="Sprite2D" parent="."]
position = Vector2(44, 107)
texture = ExtResource("5_dhpdt")

[node name="SprMiniGround2" type="Sprite2D" parent="."]
position = Vector2(194, 107)
texture = ExtResource("5_dhpdt")

[connection signal="pressed" from="StartMenu/VBoxContainer/PlayButton" to="StartMenu" method="_on_play_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/ExitButton" to="StartMenu" method="_on_exit_pressed"]
